// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProjectLicenses for a relative path should match snapshot 1`] = `
[
  {
    "content": "MIT",
    "dependencies": [
      "dep-five@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.",
    "dependencies": [
      "dep-four@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-one@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Seven

This license should be found.
",
    "dependencies": [
      "dep-seven@1.0.0",
    ],
    "notices": [
      "This is the notice file bundled with dependency seven.
",
    ],
  },
  {
    "content": "# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.",
    "dependencies": [
      "dep-three@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-two@1.0.0",
      "dep-two-duplicate@1.0.0",
    ],
    "notices": [],
  },
]
`;

exports[`getProjectLicenses for an absolute path should match snapshot 1`] = `
[
  {
    "content": "MIT",
    "dependencies": [
      "dep-five@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.",
    "dependencies": [
      "dep-four@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-one@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Seven

This license should be found.
",
    "dependencies": [
      "dep-seven@1.0.0",
    ],
    "notices": [
      "This is the notice file bundled with dependency seven.
",
    ],
  },
  {
    "content": "# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.",
    "dependencies": [
      "dep-three@1.0.0",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-two@1.0.0",
      "dep-two-duplicate@1.0.0",
    ],
    "notices": [],
  },
]
`;

exports[`getProjectLicenses should not include versions when omitVersions is true 1`] = `
[
  {
    "content": "MIT",
    "dependencies": [
      "dep-five",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.",
    "dependencies": [
      "dep-four",
    ],
    "notices": [],
  },
  {
    "content": "# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-one",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Seven

This license should be found.
",
    "dependencies": [
      "dep-seven",
    ],
    "notices": [
      "This is the notice file bundled with dependency seven.
",
    ],
  },
  {
    "content": "# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.
",
    "dependencies": [
      "dep-two",
      "dep-two-duplicate",
    ],
    "notices": [],
  },
  {
    "content": "# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.",
    "dependencies": [
      "dep-three",
    ],
    "notices": [],
  },
]
`;
